// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MODULE | ActionCard component renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "shadowColor": "#919eab1F",
          "shadowOffset": {
            "height": 12,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 24,
        }
      }
    >
      <View
        style={
          {
            "shadowColor": "#919eab80",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#c4cdd5",
              "borderRadius": 20,
              "borderWidth": 1,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#212b36",
                  "fontFamily": "PublicSans-Regular",
                  "fontSize": 14,
                },
                {
                  "color": "black",
                  "paddingBottom": 16,
                  "textAlign": "center",
                },
              ]
            }
          />
          <View>
            Test children
          </View>
          <View
            style={
              {
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#edeff2",
                  "height": 1,
                  "marginBottom": 4,
                  "marginTop": 16,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                }
              }
            >
              <View>
                <Text>
                  Test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`MODULE | ActionCard component renders correctly in disabled state 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "shadowColor": "#919eab1F",
          "shadowOffset": {
            "height": 12,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 24,
        }
      }
    >
      <View
        style={
          {
            "shadowColor": "#919eab80",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 2,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f4f6f8",
              "borderColor": "#c4cdd5",
              "borderRadius": 20,
              "borderWidth": 1,
              "width": "100%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#212b36",
                  "fontFamily": "PublicSans-Regular",
                  "fontSize": 14,
                },
                {
                  "color": "black",
                  "paddingBottom": 16,
                  "textAlign": "center",
                },
              ]
            }
          />
          <View>
            Test children
          </View>
          <View
            style={
              {
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#edeff2",
                  "height": 1,
                  "marginBottom": 4,
                  "marginTop": 16,
                  "width": "100%",
                }
              }
            />
            <View
              style={
                {
                  "alignItems": "center",
                }
              }
            >
              <View>
                <Text>
                  Test
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
